--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -1,14 +1,5 @@
 
-// scss-docs-start grid-breakpoints
-$grid-breakpoints: (
-  xs: 0,
-  sm: 320px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
-) !default;
-@import'/node_modules/bootstrap/scss/bootstrap.scss';
+
 
 
 
@@ -93,6 +84,23 @@ nav a:hover{
     background-color: rgba(255, 255, 255, 0.616);
     
 }
+.contact-info{
+    padding-top: 8rem;
+    color: white;
+}
+.contact-info a{
+    color: white;
+    text-decoration: none;
+}
+.contact{
+    background-image: url(../assets/img/contact_page_bg.jpg);
+     background-position:  top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: fit-content;
+   // width: 100vw;
+   background-attachment: fixed;
+}
 
 /// Media queries
 @media screen and (max-width: 441px) {
@@ -105,3 +113,14 @@ nav a:hover{
   }
   
 }
+
+// scss-docs-start grid-breakpoints
+$grid-breakpoints: (
+  xs: 0,
+  sm: 320px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+) !default;
+@import'/node_modules/bootstrap/scss/bootstrap.scss';
