--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -1,9 +1,7 @@
 
-
-
-
-
-
+nav{
+    background: rgba(255, 255, 255, 0.671);
+}
 nav a:focus{
     border-bottom: 3px solid black;
 }
@@ -38,6 +36,7 @@ nav a:hover{
 .logo{
     width: 13.8rem;
 }
+
 .carousel{
     //margin-top: 1rem;
     height: 100vh;
@@ -49,19 +48,19 @@ nav a:hover{
 .content-1{
     background-image: url(../assets/img/1.jpg);
     background-repeat: no-repeat;
-    background-position: center bottom;
+    background-position: center;
     background-size: cover;
     height: 100vh;
 }
 .content-2{
-    background-image: url(../assets/img/3.jpg);
+    background-image: url(../assets/img/2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
 }
 .content-3{
-    background-image: url(../assets/img/2.jpeg);
+    background-image: url(../assets/img/3.jpg);
     background-position:  center;
     background-size: cover;
     background-repeat: no-repeat;
