--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -67,8 +67,11 @@
 .news ul li ul li{
    text-align: center;
 }
-nav{
+.follow{
     z-index: 4;
+}
+nav{
+    z-index: 3;
 }
 nav a:focus{
     border-bottom: 3px solid black;
@@ -169,6 +172,37 @@ nav a:hover {
    background-attachment: fixed;
 }
 
+//About an artist////@at-root
+.artist-intro{
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.082) 18%, rgb(0, 0, 0) 56%), url(../assets/img/3.jpg);
+     background-position:  center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: fit-content;
+    color: white;
+}
+.artist-bio{
+    padding-top: 18rem;
+    text-align: center;
+}
+.artist-bio h1{
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+}
+.artist-bio p{
+    font-size: 1.7rem;
+    padding: 5rem 12rem;
+}
+.about-artist{
+    background-color: black;
+    margin-top: -2rem;
+    color: white;
+}
+.about-artist p{
+    font-size: 1.1rem;
+    padding: 0rem 3rem;
+}
+
 /// Media queries
 @media screen and (max-width: 441px) {
   .carousel-cap{
@@ -178,6 +212,27 @@ nav a:hover {
   .carousel-indicator{
       margin-top: 33rem;
   }
+  .artist-intro{
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.082) 18%, rgb(0, 0, 0) 56%), url(../assets/img/3.jpg);
+     background-position:  center;
+   // background-size: cover;
+    background-repeat: no-repeat;
+    height: fit-content;
+    color: white;
+}
+.artist-bio{
+    padding-top: 18rem;
+    text-align: center;
+}
+.artist-bio h1{
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+}
+.artist-bio p{
+    font-size: 1.7rem;
+    padding: 2rem 1rem;
+}
+
   
 }
 
