--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -202,6 +202,30 @@ nav a:hover {
     font-size: 1.1rem;
     padding: 0rem 3rem;
 }
+.video{
+    width: 1080;
+    height: 480;
+}
+.artist-contact{
+    background-image:linear-gradient( rgba(0, 0, 0, 0.575) 18%, rgba(0, 0, 0, 0.575)), url(../assets/img/contact_page_bg.jpg);
+    height: 230px;
+}
+.social{
+    margin-top: 4rem;
+}
+.buy-btn{
+    margin-left: 40rem;
+}
+.blogs{
+    background-image: url(../assets/img/contact_page_bg.jpg);
+    background-size:cover;
+     background-position: top;
+    background-repeat: no-repeat;
+    height: fit-content;
+    background-attachment: fixed;
+    color: white;
+
+}
 
 /// Media queries
 @media screen and (max-width: 441px) {
@@ -231,6 +255,9 @@ nav a:hover {
 .artist-bio p{
     font-size: 1.7rem;
     padding: 2rem 1rem;
+}
+.video{
+    width: 420px;
 }
 
   
