--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -223,6 +223,13 @@ nav a:hover {
     color: white;
 
 }
+
+.card{
+   // width: 40rem;
+    background-color: #000;
+    color: black;
+   // margin-left: 3rem;
+}
 .video-container{
      overflow: hidden;
     position: relative;
