more fixes and hacks

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -120,12 +120,12 @@ nav a:hover {
 .content-1{
     background-image: url(../assets/img/1.jpg);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position:center top;
     background-size: cover;
     height: 100vh;
 }
 .content-2{
-    background-image: url(../assets/img/2.jpg);
+    background-image: url(../assets/img/4.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
